@@ -162,9 +162,10 @@ namespace irr
 		KEY_PLAY             = 0xFA,  // Play key
 		KEY_ZOOM             = 0xFB,  // Zoom key
 		KEY_PA1              = 0xFD,  // PA1 key
-		KEY_OEM_CLEAR        = 0xFE,   // Clear key
+		KEY_OEM_CLEAR        = 0xFE,  // Clear key
+		KEY_NONE			 = 0xFF,  // usually no key mapping, but some laptops use it for fn key
 
-		KEY_KEY_CODES_COUNT  = 0xFF // this is not a key, but the amount of keycodes there are.
+		KEY_KEY_CODES_COUNT  = 0x100 // this is not a key, but the amount of keycodes there are.
 	};
 
 } // end namespace irr
